# trusty

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-then-upload.yml.bak  github-actions-build-then-upload.yml  github-actions-build-then-upload.yml.bak  github-actions-demo.yml
auxiliary/: README.md  app-0.11.x.py
documents/Writerside/: t.tree  writerside.cfg
documents/Writerside/cfg/: buildprofiles.xml
documents/Writerside/topics/: getting-started-with-trusty.md
src/: cli.rs  errors.rs  lib.rs  main.rs  render.rs  security.rs  setup.rs  sql.rs  utils.rs
tests/: foo.txt  mock_editor.py  setup_tests.rs  sql_test.rs  test.py  trusty.db
