[package]
name = "crusty"
version = "0.1.0"
edition = "2021"
authors = ["Ron Sims II", "Bisky"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
homedir = "0.2.1"
sqlite = "0.36.0"
termcolor = "1.4.1"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
