[package]
name = "crusty"
version = "0.13.8"
edition = "2021"
authors = ["Ron Sims II", "Bisky"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
edit = "0.1.5"
homedir = "0.2.1"
magic-crypt = "3.1.13"
rpassword = "7.3.1"
rusqlite = {version = "0.31.0", features = ["bundled"]}
termcolor = "1.4.1"
unicode-segmentation = "1.11.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
regex = "1.10.4"
